Actualización de portf

--- a/portfolio-garo/porfoliogaro/index.html
+++ b/portfolio-garo/porfoliogaro/index.html
@@ -48,7 +48,8 @@
             </header>
             <div class="presentacion">
                 <p class="bienvenida">Bienvenidos</p>
-                <h2>Soy Sol Garófalo, <span class="text-animation"> Software Developer & QA Automation</span></h2>
+                <!-- <h2>Soy Sol Garófalo, <span class="text-animation"> Software Developer & QA Automation</span></h2> -->
+                <h2>Soy Sol Garófalo, <span> Software Developer & QA Automation</span></h2>
 
                 <a href="#sobremi">Ir a Portafolio</a>
             </div>
@@ -82,13 +83,24 @@
                 <div class="timeline-date">2024 | Actualidad</div>
                 <div class="timeline-content">
                     <h3>.Net Developer</h3>
-                    <h4>Enta Consulting | mayo 2024 - actualidad</h4>
+                    <h4>Enta Consulting | septiembre 2024 - actualidad</h4>
                     <p>
                         Desarrollar y mantener aplicaciones en .NET (ASP.NET, MVC, Razor).<br>
                         Corregir bugs y optimizar funcionalidades en C# y LINQ.<br>
                         Implementar interfaces de usuario utilizando Razor, Kendo UI y Knockout.js.<br>
                         Colaborar con equipos para mejorar la experiencia de usuario y la funcionalidad del sistema.<br>
                         Planificar y ejecutar mejoras continuas en los procesos de desarrollo.
+                    </p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-date">2024 | Octubre</div>
+                <div class="timeline-content">
+                    <h3>Curso C#</h3>
+                    <h4>Udemy</h4>
+                    <p>
+                        Este curso me proporcionó una base sólida en C#, permitiéndome trabajar con tipos de datos y aplicar principios de Programación Orientada a Objetos (POO) como clases, objetos, herencia, interfaces y genéricos. Además, aprendí a utilizar LINQ para manejar colecciones de datos de manera declarativa, a conectar bases de datos desde C#.
                     </p>
                 </div>
             </div>
@@ -146,7 +158,7 @@
                 <div class="timeline-date">2024 | Mayo</div>
                 <div class="timeline-content">
                     <h3>Analista Funcional RPA</h3>
-                    <h4>Enta Consulting | abril 2023 - mayo 2024</h4>
+                    <h4>Enta Consulting | abril 2023 - agosto 2024</h4>
                     <p>
                         Realizar el relevamiento, análisis y diseño de procesos de negocio y sistemas informáticos, asegurando una adecuada comprensión y optimización de los mismos. <br>
                         Diseñar y elaborar diagramas de flujo (To Be y As Is) para visualizar y documentar los cambios necesarios en los procesos.<br>
@@ -270,7 +282,7 @@
                 <a href="https://desafio-weatherchannel-garofalo.netlify.app/">
                 <img src="img/clima.png" alt="">
                 <div class="info">
-                    <h4>Descripcion Proyecto</h4>
+                    <h4>API's Weather Channel</h4>
                     <p>HTML | CSS | JavaScript</p>
                 </div>
                 </a>
